# bcvserver

./: BCVServer.sln
BCVServer/: BCVServer.vcxproj  BCVServer.vcxproj.filters  CMakeLists.txt  http_server.cpp  http_server.h  main.cpp  mongoose.cpp
test/: main.cpp  test.vcxproj
